# ingestionx-ldp-framework

./: .gitignore  README.md  UNIFIED_FRAMEWORK_README.md  UNIFIED_FRAMEWORK_TECHNICAL.md  azure-pipelines-minimal.yml  databricks.yml  mutators.py  pyproject.toml  run_tests.py
config/: unified_pipeline_config.tsv
docs/: COLUMN_FIXES_SUMMARY.md  DEVELOPER.md  FULLY_QUALIFIED_TABLE_NAMES_FIX.md  SCHEDULING_EXAMPLES.md  SCHEDULING_FIX_SUMMARY.md  SCHEMA_FIX_SUMMARY.md  USER_GUIDE.md  VALIDATION.md  tagging_strategy.md
resources/: __init__.py  notebook_generator.py  unified_pipeline_generator.py
sample_data/: README.md  customers.csv  customers.parquet  generate_parquet.py  order_items.json  order_items.parquet  orders.json  orders.parquet  products.csv  products.parquet  test_config_adls.tsv  upload_to_adls.sh
scripts/: validate.sh
src/notebooks/: unified_pipeline.py
src/notebooks/manual/: README.md  bronze_manual_test.py  data_generation_demo.py  gold_manual_test.py  manual_test_step1.py  manual_test_step2.py  manual_test_step3.py  parallel_manual_test.py  silver_manual_test.py
src/utils/: __init__.py  config_parser.py  schema_converter.py  validate_config.py
tests/: README.md  __init__.py  conftest.py  test_cases.json  test_config_parser.py  test_expression_parser.py  test_integration.py  test_notebook_generator.py  test_schema_converter.py  test_unified_pipeline_generator.py
