[project]
name = "autoloader-framework-pydab"
version = "0.1.0"
description = "Databricks Asset Bundle for Autoloader Jobs with DLT/Lakeflow Declarative Pipelines"
requires-python = ">=3.10"
dependencies = [
    "databricks-bundles>=0.248.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pyspark>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "resources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["src/notebooks"]

[tool.uv] 

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "pyspark>=4.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
]
